--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,14 @@ owner: Ho Ai Ing # Your GitHub organization or username, where this repository l
 repo: final # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: NCU
+    url: https://www.ncu.edu.tw/tw/
+  - name: Youtube
+    url: https://www.youtube.com/
+  - name: Facebook
+    url: https://www.facebook.com/
+  - name: TikTok
+    url: https://www.douyin.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
