--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,6 +11,8 @@ sites:
     url: https://www.facebook.com/
   - name: TikTok
     url: https://www.douyin.com/
+   - name: Twitter
+    url: https://twitter.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
