--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: Ho Ai Ing # Your GitHub organization or username, where this repository lives
-repo: Upptime # The name of this repository
+repo: final # The name of this repository
 
 sites:
   - name: NCU
