--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,7 +12,7 @@ sites:
   - name: TikTok
     url: https://www.douyin.com/
    - name: Twitter
-    url: https://twitter.com/
+    url: abc
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
