--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,7 +12,7 @@ sites:
   - name: TikTok
     url: https://www.douyin.com/
   - name: Twitter
-    url: abcdsdfsrff
+    url: https://abcdsdfsrff
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
