--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,8 +12,8 @@ sites:
   - name: TikTok
     url: https://www.douyin.com/
   - name: Twitter
-    url: https://abcdsdfsrff
-
+    url: https://twitter.com/
+    
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
