--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,6 +13,8 @@ sites:
     url: https://www.douyin.com/
   - name: Twitter
     url: https://portal.ncu.edu.tw/
+   - name: TikTok
+    url: https://www.douyin.com/
     
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
