--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,9 +12,8 @@ sites:
   - name: TikTok
     url: https://www.douyin.com/
   - name: Twitter
-    url: https://portal.ncu.edu.tw/
-   - name: TikTok
-    url: https://www.douyin.com/
+    url: https://rgrg
+
     
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
